src/test/deca/context/invalid/improvided/decl-type_not_existe.deca
{
    //erreur (0.2) type non predefini
    akil x;
}